# fyraliscore

./: .dockerignore  .gitignore  CLAUDE.md  CODEBASE-ARCHITECTURE.md  Dockerfile  Dockerfile.ui  README.md  SMOKE_IN13_RERUN.md  SMOKE_IN13_WEBHOOK.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  fyralis_today_expanded_review_design_spec.md  fyralis_today_page_redesign_change_spec.md  nginx-ui.conf  pyproject.toml
.claude/commands/: sdd.md
.github/workflows/: ci.yml  ingestion-tests.yml  real-llm-nightly.yml
.specify/: feature.json
bench/: BENCHMARKING.md
db/migrations/: 0001_foundation.sql  0002_models_amendments.sql  0003_actor_sessions.sql  0004_think_trigger_queue.sql  0005_entity_review_queue.sql  (+39 more)
demo/: SPEAKER-NOTES.md
docs/: dev-setup.md
lsob/: docker-compose.yml  pyproject.toml
lsob/.github/workflows/: ci.yaml
lsob/docs/: CONTRACTS.md
lsob/fixtures/: mini_corpus_a.json  mini_corpus_b.json  mini_corpus_c.json
lsob/reports/judge_calibration/: 20260423T152136Z-mock.json
lsob/scripts/: bootstrap.sh
scripts/: bootstrap_integration_test.py  capture_scenario_home.py  check_schema_drift.py  diagnose_retrieval_determinism.py  docker-migrate.sh  dogfood_inspect.sh  reset_dogfood_tenant_data.sh  run_discord_gateway_worker.py  run_post_commit_worker.py  seed_dogfood_tenant.py
simulation/: README.md  __init__.py  inspect.py  personas.py  personas.yaml  reset.py  server.py
ui/: index.html  mock-server.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
(+847 files in other folders)
