[project]
name = "lsob"
version = "0.1.0"
description = "Longitudinal Synthetic-Organization Benchmark (LSOB)"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
lsob-contracts = { workspace = true }
lsob-simulation = { workspace = true }
lsob-evaluator-l1 = { workspace = true }
lsob-evaluator-l2 = { workspace = true }
lsob-evaluator-l3 = { workspace = true }
lsob-evaluator-l4 = { workspace = true }
lsob-evaluator-l5 = { workspace = true }
lsob-evaluator-l6 = { workspace = true }
lsob-baselines = { workspace = true }
lsob-harness = { workspace = true }
lsob-reporting = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
